--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 						<div class="popup_content_wrapper">
 							<div class="popup_title">עדכן סיסמא</div>
 							<div class="popup_sub_title">הכנס את סיסמתך הישנה ואת הסהמא החדשה, אחר כך לחץ על כפתור ה"עדכן"</div>
+							<form name="from_name">
 							<div class="popup_input_wrapper">
 								<label class="lable_input">סיסמא נוכחית (6 עד 8 תווים)</label>
 								<input type="password" class="input_content" maxlength="8" />
@@ -25,7 +26,8 @@
 							<div class="popup_input_wrapper">
 								<label class="lable_input">סיסמא חדשה (6 עד 8 תווים)</label>
 								<input type="password" class="input_content" maxlength="8" />
-							</div>							
+							</div>
+							</form>							
 							<input type="button" class="popup_click" value="עדכן סיסמא"/>
 							<div class="forgot_password">שכחתי סיסמא</div>
 						</div>
