--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 		<title>ott</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="jquery.min.js"></script>
-		<script src="script.js"></script>
+		
 	</head>
 	<body>
+<!--
 		<div class="ca_mask">
 			<div class="inner_display"></div>
 			<div class="ca_middle_wrapper">
@@ -18,26 +19,26 @@
 						<div class="popup_content_wrapper">
 							<div class="popup_title">עדכן סיסמא</div>
 							<div class="popup_sub_title">הכנס את סיסמתך הישנה ואת הסהמא החדשה, אחר כך לחץ על כפתור ה"עדכן"</div>
-							<form name="from_name">
-							<div class="popup_input_wrapper">
-								<label class="lable_input">סיסמא נוכחית (6 עד 8 תווים)</label>
-								<input type="password" class="input_content" maxlength="8" />
-							</div>
-							<div class="popup_input_wrapper">
-								<label class="lable_input">סיסמא חדשה (6 עד 8 תווים)</label>
-								<input type="password" class="input_content" maxlength="8" />
-							</div>
+							<form name="" id="">
+								<div class="popup_input_wrapper">
+									<label class="lable_input">סיסמא נוכחית (6 עד 8 תווים)</label>
+									<input type="password" class="input_content" maxlength="8" />
+								</div>
+								<div class="popup_input_wrapper">
+									<label class="lable_input">סיסמא חדשה (6 עד 8 תווים)</label>
+									<input type="password" class="input_content" maxlength="8" />
+								</div>
 							</form>							
 							<input type="button" class="popup_click" value="עדכן סיסמא"/>
 							<div class="forgot_password">שכחתי סיסמא</div>
 						</div>
-						
-					</div>
-					
+					</div>			
 				</div>
 			</div>
 			<div class="inner_display"></div>
 		</div>
+-->
+		<script src="script.js"></script>
 	</body>
 </html>
 	
