--- a/index.html
+++ b/index.html
@@ -4,42 +4,36 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="initial-scale=1, minimum-scale=1,maximum-scale=1, user-scalable=0, height=device-height, width=device-width">
 		<title>ott</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<script src="jquery.min.js"></script>
 		
+		<script src="jquery.min.js"></script>
+		<script src="script.js"></script>
 	</head>
 	<body>
-		<script src="script.js"></script>
-<!--
-		<div class="ca_mask">
-			<div class="inner_display"></div>
-			<div class="ca_middle_wrapper">
-				<div class="ca_popup_wrapper">
-					<div class="x_popup_wrapper">
-						<div class="x_popup"></div>
-						<div class="popup_content_wrapper">
-							<div class="popup_title">עדכן סיסמא</div>
-							<div class="popup_sub_title">הכנס את סיסמתך הישנה ואת הסהמא החדשה, אחר כך לחץ על כפתור ה"עדכן"</div>
-							<form name="" id="">
-								<div class="popup_input_wrapper">
-									<label class="lable_input">סיסמא נוכחית (6 עד 8 תווים)</label>
-									<input type="password" class="input_content" maxlength="8" />
-								</div>
-								<div class="popup_input_wrapper">
-									<label class="lable_input">סיסמא חדשה (6 עד 8 תווים)</label>
-									<input type="password" class="input_content" maxlength="8" />
-								</div>
-							</form>							
-							<input type="button" class="popup_click" value="עדכן סיסמא"/>
-							<div class="forgot_password">שכחתי סיסמא</div>
-						</div>
-					</div>			
-				</div>
-			</div>
-			<div class="inner_display"></div>
-		</div>
--->
 		
+		<div class="buttons_wrapper">
+			<div class="btn" data="new">new password</div>
+			<div class="btn" data="dtails">update details</div>
+			<div class="btn" data="email">code to email</div>
+			<div class="btn" data="password">update password</div>
+		</div>
+		<div id="main"></div>
+		<div class="script_wrapper">
+		</div>	
+		<script type="text/javascript">
+			function dd(){
+				alert('haray');
+			}
+			$('body').on('click','.btn',function(){
+				var details = { current_password: '1234',firstName: 'yishai',lastName: 'stern'};
+				tmp_str = $(this).attr('data');
+				switch (tmp_str){
+					case 'new': event_popup('choose',details,dd,{});break;
+					case 'email': event_popup('reset',details,dd,{}); break;
+					case 'password': event_popup('update',details,dd,{}); break;
+					case 'dtails': event_popup('user',details,dd,{}); break;
+				}
+			});
+		</script>
 	</body>
 </html>
 	
